Updated ignore and attribute files

--- a/.gitattributes
+++ b/.gitattributes
@@ -9,6 +9,9 @@
 *.fsproj merge=union
 *.dbproj merge=union
 
+# Delphi
+*.dproj merge=union
+
 # Standard to msysgit
 *.doc	 diff=astextplain
 *.DOC	 diff=astextplain
