Functional: Map function, interface wrapping
Functional.Map applies a transformation function to each element in the
source enumerator before returning the transformed element.

Wrapper can now handle interfaces which contain RTTI, ie either descend
from IInvokable or is otherwise compiled with RTTI ($M+ for example).
This allows wrapping of Spring4D collections etc.

--- a/tests/NuLibFunctionalTest.dproj
+++ b/tests/NuLibFunctionalTest.dproj
@@ -117,6 +117,7 @@
         <DCCReference Include="..\src\NuLib.Functional.Detail.EnumerableWrapper.pas"/>
         <DCCReference Include="..\src\NuLib.Functional.Detail.Filter.pas"/>
         <DCCReference Include="..\src\NuLib.Functional.Detail.Aggregate.pas"/>
+        <DCCReference Include="..\src\NuLib.Functional.Detail.Map.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
