Functional: Added Slice, Enumerable.Select
Slice works similar to Python's islice() from itertools.

--- a/tests/NuLibFunctionalTest.dproj
+++ b/tests/NuLibFunctionalTest.dproj
@@ -121,6 +121,7 @@
         <DCCReference Include="..\src\NuLib.Functional.Detail.Aggregate.pas"/>
         <DCCReference Include="..\src\NuLib.Functional.Detail.Map.pas"/>
         <DCCReference Include="..\src\NuLib.Functional.Detail.OrderedEnumerable.pas"/>
+        <DCCReference Include="..\src\NuLib.Functional.Detail.Slice.pas"/>
         <DCCReference Include="..\src\NuLib.Common.pas"/>
         <DCCReference Include="..\src\NuLib.Detail.pas"/>
         <BuildConfiguration Include="Release">
